Light mode/dark mode, fix container width

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -42,13 +42,8 @@ li {
 a {
   text-decoration: none;
   color: black; /* White text for links */
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 1.1rem;
   transition: color 0.3s ease;
-}
-
-a:hover {
-  color: white; /* Darker color on hover */
 }
 
 /* Buttons and forms */
@@ -119,6 +114,7 @@ footer {
 /* card ui styling */
 
 .card {
+  max-width: 300px;
   position: relative;
   overflow: hidden;
   background: #ff7f11;
@@ -162,7 +158,7 @@ footer {
 }
 
 .heading {
-  font-size: 85%;
+  font-size: 1.2rem;
   font-weight: 200;
   color: black;
   padding: 7px;
@@ -171,10 +167,6 @@ footer {
 
 .name {
   font-weight: 600;
-}
-
-.name:hover {
-  cursor: pointer;
 }
 
 .card-container {
@@ -192,7 +184,7 @@ body.dark-mode {
 }
 
 body.dark-mode nav {
-  background-color: #333;
+  background-color: #ff7f11;
 }
 
 body.dark-mode a {
@@ -226,7 +218,9 @@ body.dark-mode footer {
 .theme {
   --bg-color: #fff;
   --main-color: #323232;
-  position: relative;
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  right: 10px; /* Adjust as needed */
   display: flex;
   justify-content: center;
   align-items: center;
